// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component should contains wide styles 1`] = `
<div>
  <div
    class="wrapper wrapper__wide"
  >
    <label
      class="label label__wide"
    >
      <input
        class="input input__common_wide"
        placeholder="Test"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`Input component should has proper value and called handler 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <input
        class="input"
        placeholder="Test"
        value="test text"
      />
    </label>
  </div>
</div>
`;

exports[`Input component should has text label 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <p
        class="textSecond"
      >
        test label
      </p>
      <input
        class="input"
        placeholder="Test"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`Input component should render element label 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <span
        data-testid="label"
      >
        label
      </span>
      <input
        class="input"
        placeholder="Test"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`Input component should render error and have proper styles 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <textarea
        class="textarea input__common_invalid"
        placeholder="Test"
      />
    </label>
    <span
      class="error__static"
    >
      error
    </span>
  </div>
</div>
`;

exports[`Input component should render input 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <input
        class="input"
        placeholder="Test"
        value=""
      />
    </label>
  </div>
</div>
`;

exports[`Input component should render textarea 1`] = `
<div>
  <div
    class="wrapper"
  >
    <label
      class="label"
    >
      <textarea
        class="textarea"
        placeholder="Test"
      />
    </label>
  </div>
</div>
`;
